# procyon-motor-ctl

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  config.json  defines.h  motor.cpp  package.xml  rover_2018_arduino.ino
arduino/: Common.h  motor.h
arduino/armduino/: ActuatedJoint.cpp  ActuatedJoint.h  Common.h  LinearActuator.cpp  LinearActuator.h  Pinger.cpp  Pinger.h  armduino.ino  serial_util.py
arduino/encoder/: encoder.ino
arduino/rover_2018_arduino/: ActuatedJoint.cpp  ActuatedJoint.h  Controller.cpp  Controller.h  EncodedJoint.cpp  EncodedJoint.h  JointDriver.cpp  JointDriver.h  Kalman.cpp  LinearActuator.cpp  LinearActuator.h  Pinger.cpp  Pinger.h  Proxy.cpp  Proxy.h  RoverArmSpec.h  a__RoverArmSpec.cpp  common.h  defines.h  motor.h  rov.cpp  rov.h  rover_2018_arduino.ino  wheel.h
arduino/serial_test/: serial_test.ino
arduino/test/: common.h  defines.h  motor.cpp  motor.h  rov.cpp  test.ino
src/: .serial_motor_driver.py.swp  main.py  serial_motor_driver.py  xbox_arduino_ctl.py
src/devices/: Driver.py  FileDriver.py  SerialDriver.py
src/inputs/: Redis.py
src/protocols/: HashDelimited.py
src/util/: Keychain.py
